--- a/new-banner.html
+++ b/new-banner.html
@@ -17,12 +17,13 @@
   <body>
 
     <!-- header -->
-    <header class="container-fluid p-0 text-white text-center text-md-start">
-        <nav class="navbar navbar-expand-lg banner-properties-new pt-5">
+    <header class="container-fluid p-0 text-white text-center text-md-start banner-gradient">
+        <nav class="navbar navbar-expand-lg pt-2 pt-md-5">
             <div class="container mb-3">
-                <button class="navbar-toggler ms-auto mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand text-white fw-bolder" href="#">Bikerz Zone</a>
+              <button class="navbar-toggler ms-auto mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon bg-light"></span>
-                </button>
+              </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-5 mb-lg-0 me-3 fw-semibold">
                   <li class="nav-item me-3">
@@ -45,18 +46,11 @@
           </nav>
 
           <!-- banner slider -->
-          <div class="banner-properties pb-5">
-            <div class="row pt-4">
-                <div class="col-12 col-md-6 d-flex justify-content-center align-items-center">
-                    <div class="w-75">
-                         <h1>Honda CBR 300R</h1>
-                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                        <button class="btn btn-danger mb-3">Purchase</button>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6">
-                    <img src="images/header-bike.png" class="w-75 w-md-100" alt="...">
-                </div>
+          <div class="pb-5">
+            <div class="container ms-5 p-5 w-75 text-center text-md-start">
+                <h1 class="mb-4">Keep Your Ride Safe At Every Time</h1>
+                <p class="mb-4">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="btn btn-danger mb-3">Purchase</button>
             </div>
           </div>
     </header>
